--- a/Views/Progetto/Edit.cshtml
+++ b/Views/Progetto/Edit.cshtml
@@ -1219,7 +1219,7 @@
                 <textarea class="form-control" id="descrizione" placeholder="descrizione del progetto" rows="5" cols="40" style="resize:none"
                     maxlength="1000" asp-for="@Model.Progetto.Descrizione"></textarea>
             </div>
-        <div class="col-sm-6 col-sm-offset-6 text-right"><br>
+        <div class="col-sm-12 text-center"><br>
                                         <div class="form-group">
                                             <input type="submit" class="btn btn-info" value="Salva" style="position:fixed;width:100px;height:40px;bottom:40px;right:50px;" />&nbsp;&nbsp;
                                             <a asp-action="Index"> Torna alla lista</a>
