Correzione check e installazione dipendenze

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -120,11 +120,12 @@
                     WebMVA dipende da alcuni pacchetti che devono essere installati, ovvero:
                     <ul>
                         <li>nmap</li>
+                        <li>ruby</li>
+                        <li>perl</li>
                         <li>Apache fop</li>
                         <li>wkhtmltopdf</li>
-                        <li>ruby</li>
                         <li>Python 2 e 3 più pip per entrambi</li>
-                        <li>perl</li>
+                        <li>timedatectl (per sincronizzazione tempo con NTP)</li>
                         <li>dotnet (se questo sito sta partendo è difficile non averlo! =)</li>
                         <li>aircrack-ng, cowpatty, bully, reaver, pyrit, tshark per Wifite2</li>
                     </ul>
