modifica Sublister All--> AllSUB

--- a/Views/Modulo/Edit.cshtml
+++ b/Views/Modulo/Edit.cshtml
@@ -1969,7 +1969,7 @@
                                                     <div class="form-group row">
                                                         <div class="col-sm-6">
                                                             <label class="control-label">
-                                                                <input type="checkbox" asp-for="@Model.SUBLIST3R.All" /> Tutto
+                                                                <input type="checkbox" asp-for="@Model.SUBLIST3R.AllSUB" /> Tutto
                                                             </label>
                                                         </div>
                                                     </div>
