--- a/Views/Modulo/Create.cshtml
+++ b/Views/Modulo/Create.cshtml
@@ -2220,7 +2220,7 @@
                                                     <div class="form-group row">
                                                         <div class="col-sm-6">
                                                             <label class="control-label">
-                                                                <input type="checkbox" asp-for="@Model.SUBLIST3R.All" /> Tutto
+                                                                <input type="checkbox" asp-for="@Model.SUBLIST3R.AllSUB" /> Tutto
                                                             </label>
                                                         </div>
                                                     </div>
