inserito drupwn e apportare modifiche grafiche

--- a/Views/Progetto/Delete.cshtml
+++ b/Views/Progetto/Delete.cshtml
@@ -21,6 +21,7 @@ var contOdat = 0;
 var contDnsEnum = 0;
 var contTheHarvester = 0;
 var contAmass = 0;
+var contDrupwn = 0;
 
 }
 <br>
@@ -83,6 +84,7 @@ var contAmass = 0;
                             if(item.Modulo is webmva.Models.ModuloOPENVAS) {contOpenVAS++;}
                             if(item.Modulo is webmva.Models.ModuloTHEHARVESTER) {contTheHarvester++;}
                             if(item.Modulo is webmva.Models.ModuloAMASS) {contAmass++;}
+                            if(item.Modulo is webmva.Models.ModuloDRUPWN) {contDrupwn++;}
                         }
                         @if(contNMAP!=0){
                                 
@@ -657,6 +659,34 @@ var contAmass = 0;
                         @foreach (var item in Model.ModuliProgetto) {
                             
                                 @if(item.Modulo is webmva.Models.ModouloAMASS){
+                                <tr>
+                                <td></td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Modulo.Nome)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Modulo.Comando)
+                                    </td>
+                                </tr>
+                               
+                                }
+                                }
+                                </table>
+                                </dd>    
+                        } 
+                         @if(contDrupwn!=0){
+                                
+                            <dd>Drupwn</dd>
+                            <dd>
+                            <table class="table">
+                                <tr>
+                                    <th> </th>
+                                    <th>Modulo</th>
+                                    <th>Comando</th>
+                                </tr>
+                        @foreach (var item in Model.ModuliProgetto) {
+                            
+                                @if(item.Modulo is webmva.Models.ModuloDRUPWN){
                                 <tr>
                                 <td></td>
                                     <td>
