--- a/Views/Modulo/Edit.cshtml
+++ b/Views/Modulo/Edit.cshtml
@@ -21,6 +21,7 @@
     bool openvas = Model.OPENVAS != null;
     bool theharvester = Model.THEHARVESTER != null;
     bool amass = Model.AMASS != null;
+    bool drupwn =Model.DRUPWN != null;
 }
 
 
@@ -2626,14 +2627,14 @@
                                           <div class="form-group row">
                                                     <div class="col-sm-6">
                                                         <label class="control-label">
-                                                            <input type="checkbox" asp-for="@Model.THEHARVESTER.RicercaHostsVirtualiTheH" /> Ricerca Hosts Virtuali
+                                                            <input type="checkbox" asp-for="@Model.THEHARVESTER.RicercaHostsVirtualiTheH" /> Ricerca Hosts Virtuali (-v)
                                                         </label>
                                                     </div>
                                                 </div>
                                                 <div class="form-group row">
                                                     <div class="col-sm-6">
                                                         <label class="control-label">
-                                                            <input type="checkbox" asp-for="@Model.THEHARVESTER.DNSReverseQueryTheH" /> DNS Reverse Query
+                                                            <input type="checkbox" asp-for="@Model.THEHARVESTER.DNSReverseQueryTheH" /> DNS Reverse Query (-n)
                                                         </label>
                                                     </div>
                                                 </div>
@@ -2642,14 +2643,14 @@
                                                 <div class="form-group row">
                                                     <div class="col-sm-6">
                                                         <label class="control-label">
-                                                            <input type="checkbox" asp-for="@Model.THEHARVESTER.DNSTLDTheH" /> DNS TLD
+                                                            <input type="checkbox" asp-for="@Model.THEHARVESTER.DNSTLDTheH" /> DNS TLD (-t)
                                                         </label>
                                                     </div>
                                                 </div>
                                                  <div class="form-group row">
                                                     <div class="col-sm-6">
                                                         <label class="control-label">
-                                                            <input type="checkbox" asp-for="@Model.THEHARVESTER.DNSBruteForceTheH" /> DNS Brute Force
+                                                            <input type="checkbox" asp-for="@Model.THEHARVESTER.DNSBruteForceTheH" /> DNS Brute Force (-c)
                                                         </label>
                                                     </div>
                                                 </div>
@@ -2827,28 +2828,28 @@
                                                 <div class="form-group row">
                                                     <div class="col-sm-6">
                                                         <label class="control-label">
-                                                            <input type="checkbox" asp-for="@Model.AMASS.WhoisAmass" />   Whois
+                                                            <input type="checkbox" asp-for="@Model.AMASS.WhoisAmass" />   Whois (-whois)
                                                         </label>
                                                     </div>
                                                 </div>
                                                  <div class="form-group row">
                                                     <div class="col-sm-6">
                                                         <label class="control-label">
-                                                            <input type="checkbox" asp-for="@Model.AMASS.VerboseAmass" />  Verbose
+                                                            <input type="checkbox" asp-for="@Model.AMASS.VerboseAmass" />  Verbose (-v)
                                                         </label>
                                                     </div>
                                                 </div>
                                                 <div class="form-group row">
                                                     <div class="col-sm-6">
                                                         <label class="control-label">
-                                                            <input type="checkbox" asp-for="@Model.AMASS.NoDnsAmass" />  No DNS
+                                                            <input type="checkbox" asp-for="@Model.AMASS.NoDnsAmass" />  No DNS (-nodns)
                                                         </label>
                                                     </div>
                                                 </div>
                                                 <div class="form-group row">
                                                     <div class=" col-sm-6">
                                                         <label class="control-label">
-                                                            <input type="checkbox" asp-for="@Model.AMASS.IpAmass" />  Ip
+                                                            <input type="checkbox" asp-for="@Model.AMASS.IpAmass" />  Ip (-ip)
                                                         </label>
                                                     </div>
                                                 </div>
@@ -2857,21 +2858,21 @@
                                                 <div class="form-group row">
                                                     <div class=" col-sm-6">
                                                         <label class="control-label">
-                                                            <input type="checkbox" asp-for="@Model.AMASS.NoAltsAmass" />  No Alts
+                                                            <input type="checkbox" asp-for="@Model.AMASS.NoAltsAmass" />  No Alts (-noalts)
                                                         </label>
                                                     </div>
                                                 </div>
                                                 <div class="form-group row">
                                                     <div class="col-sm-6">
                                                         <label class="control-label">
-                                                            <input type="checkbox" asp-for="@Model.AMASS.ActiveAmass" />  Active
+                                                            <input type="checkbox" asp-for="@Model.AMASS.ActiveAmass" />  Active (-active)
                                                         </label>
                                                     </div>
                                                 </div>
                                                 <div class="form-group row">
                                                     <div class="col-sm-6">
                                                         <label class="control-label">
-                                                            <input type="checkbox" asp-for="@Model.AMASS.BruteAmass" />  Brute Force
+                                                            <input type="checkbox" asp-for="@Model.AMASS.BruteAmass" />  Brute Force (-brute)
                                                         </label>
                                                     </div>
                                                 </div>
@@ -2906,6 +2907,8 @@
         <hr />
        <form asp-action="Create" name="nessusForm">
                             <input type="hidden" asp-for="@Model.NESSUS.Applicazione" value="@webmva.Models.APPLICAZIONE.NESSUS" />
+                             <input type="hidden" asp-for="@Model.NESSUS.ID" />
+                                <div class="row panel panel-default panel-body">
                             <div class="col-sm-12">
                                   <div class="col-sm-7" style="margin:0 auto; float:none">
                                     <div class="form-group row">
@@ -2990,8 +2993,117 @@
                                         </div>
                                         
                             </div>
+                            </div>
                     </form>
                         }
+@* -----DRUPWN----- *@
+    if (drupwn)
+   { 
+        <h2><em>Modifica modulo</em><strong> @(Model.DRUPWN.Nome)</strong></h2>
+        <hr />
+                         <form asp-action="Edit" name="drupwnForm">
+                                <input type="hidden" asp-for="@Model.DRUPWN.Applicazione" value="@webmva.Models.APPLICAZIONE.DRUPWN" />
+                                <input type="hidden" asp-for="@Model.DRUPWN.ID" />
+                                <div class="row panel panel-default panel-body">
+                                <div class="col-sm-12">
+                                    <div class="col-sm-7" style="margin:0 auto; float:none">
+                                        <div class="form-group">
+                                            <h4 asp-for="@(Model.DRUPWN.Nome)">Nome Modulo</h4>
+                                            <input class="form-control" asp-for="@(Model.DRUPWN.Nome)" />
+                                        </div>
+                                    </div>
+                                    <hr />
+                                    <div class="col-sm-12">
+                                        <div class="col-sm-12">
+                                            <div class="col-sm-7" style="margin:0 auto; float:none">
+                                                <div class="form-group row">
+                                                    <h4 asp-for="@(Model.DRUPWN.ComandoPersonalizzato)">Comando Personalizzato</h4>
+                                                    <input class="form-control" asp-for="@(Model.DRUPWN.ComandoPersonalizzato)" />
+                                                </div>
+
+                                            </div>
+
+                                        </div>
+
+                                    </div>
+                                     <div class="form-group row">
+                                            <div class="col-sm-4">
+                                                <label class="control-label">Scegli lo user agent </label>
+                                            </div>
+                                             <div class="col-sm-1"></div>
+                                            <input type="text" class="col-sm-5" asp-for="@Model.DRUPWN.UserAgentDrupwn" placeholder="Googlebot" />  
+                                        </div>
+                                        <div class="form-group row">
+                                            <div class="col-sm-4">
+                                                <label class="control-label">Scegli il numero di threads </label>
+                                            </div>
+                                             <div class="col-sm-1"></div>
+                                            <input type="number" class="col-sm-5" asp-for="@Model.DRUPWN.ThreadDrupwn" value="-1" />  
+                                        </div>
+                                          
+                                    <div class="col-sm-12">
+                                        <h4>Tipi di enumerazione</h4>                                       
+                                         <hr />
+                                         <div class="col-sm-6">
+                                       <div class="form-group row">
+                                                    <div class="col-sm-6">
+                                                        <label class="control-label">
+                                                            <input type="checkbox" asp-for="@Model.DRUPWN.UsersDrupwn" /> Users (--users)
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                                 <div class="form-group row">
+                                                    <div class="col-sm-6">
+                                                        <label class="control-label">
+                                                            <input type="checkbox" asp-for="@Model.DRUPWN.NodesDrupwn" /> Nodes (--nodes)
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                                 <div class="form-group row">
+                                                    <div class="col-sm-6">
+                                                        <label class="control-label">
+                                                            <input type="checkbox" asp-for="@Model.DRUPWN.ModulesDrupwn" /> Modules (--modules)
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                                </div>
+                                                <div class="col-sm-6">
+                                                 <div class="form-group row">
+                                                    <div class="col-sm-6">
+                                                        <label class="control-label">
+                                                            <input type="checkbox" asp-for="@Model.DRUPWN.DFilesDrupwn" /> DFiles  (--dfiles)
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                                 <div class="form-group row">
+                                                    <div class="col-sm-6">
+                                                        <label class="control-label">
+                                                            <input type="checkbox" asp-for="@Model.DRUPWN.ThemesDrupwn" /> Themes  (--themes)
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                                </div> 
+                                        <div class="col-sm-12">
+                                            <hr/>
+                                            <div class="col-sm-5">
+                                                <div clas="form-group row">
+                                                 <a href="https://github.com/immunIT/drupwn"target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
+                                        consulta il documentazione di Drupwn</a>
+                                        </div>
+                                        </div>
+                                        <div class="col-sm-1"></div>
+                                        <div class="col-sm-6 text-right">
+                                            <div class="form-group row">
+                                                <input type="submit" asp-action="Edit"  asp-route-cosa="drupwn" class="btn btn-default" value="Modifica" />&nbsp;&nbsp; |
+                                                <a asp-action="Index"> Torna alla lista</a>
+                                            </div>
+                                        </div>
+                                        </div>
+                                    </div>
+                                </div>
+                             </div>
+                            </form>
+                            }
 
 }
 @section scripts{
