--- a/Views/Modulo/Index.cshtml
+++ b/Views/Modulo/Index.cshtml
@@ -107,11 +107,16 @@
 
                                             <li>
                                                 <a   data-toggle="collapse" href="#Droopescan">
-                                                    Droope
+                                                    Droopescan
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
                                             </li>
-
+                                            <li>
+                                                <a   data-toggle="collapse" href="#Drupwn">
+                                                    Drupwn
+                                                    <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
+                                                </a>
+                                            </li>
                                             <li>
                                                 <a   data-toggle="collapse" href="#JOOMSCAN">
                                                     Joomscan
@@ -622,6 +627,56 @@
                                 </div>
                                 <tbody>
                                     @foreach (var item in Model.ModuliDROOPE) { 
+                                    <tr>
+                                        <td>
+                                           <a asp-action="Details" asp-route-id="@item.ID"> @Html.DisplayFor(modelItem => item.Nome)</a> 
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Comando)
+                                        </td>
+                                        <td>
+                                            <a asp-action="Edit" asp-route-id="@item.ID">Modifica</a> |
+                                            <a asp-action="Delete" asp-route-id="@item.ID">Cancella</a>
+                                        </td>
+                                    </tr>
+                                    }
+                                </tbody>
+                            </table>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+               <div class="col-5">
+                <div class="panel panel-sidebar">
+                    <div class="panel-heading">
+                        <a   data-toggle="collapse"  href="#Drupwn">
+                            <strong>
+                                 DRUPWN
+                            </strong>
+                            <span class="caret"></span>
+                        </a>
+                    </div>
+                    <div class="collapse " id="Drupwn">
+                        <div class="panel-body ">
+
+                            <table class="table">
+                                <div class="method">
+                                    <thead>
+                                        <tr>
+                                            <th>
+                                                Nome
+                                            </th>
+                                            <th>
+                                                Comando
+                                            </th>
+
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                </div>
+                                <tbody>
+                                    @foreach (var item in Model.ModuliDRUPWN) { 
                                     <tr>
                                         <td>
                                            <a asp-action="Details" asp-route-id="@item.ID"> @Html.DisplayFor(modelItem => item.Nome)</a> 
