--- a/Views/Progetto/Delete.cshtml
+++ b/Views/Progetto/Delete.cshtml
@@ -658,7 +658,7 @@ var contDrupwn = 0;
                                 </tr>
                         @foreach (var item in Model.ModuliProgetto) {
                             
-                                @if(item.Modulo is webmva.Models.ModouloAMASS){
+                                @if(item.Modulo is webmva.Models.ModuloAMASS){
                                 <tr>
                                 <td></td>
                                     <td>
