--- a/Views/Modulo/Edit.cshtml
+++ b/Views/Modulo/Edit.cshtml
@@ -271,7 +271,7 @@
                                             <div class="col-sm-7" style="margin:0 auto; float:none">
                                                 <div class="form-group row">
                                                     <h4 asp-for="@(Model.NESSUS.Porta)">Porta</h4>
-                                                    <input <input type="number" class="form-control" asp-for="@(Model.NESSUS.Porta)" value="8834"  />
+                                                    <input <input type="number" class="form-control" asp-for="@(Model.NESSUS.Porta)" />
                                                 </div>
 
                                             </div>
@@ -370,7 +370,7 @@
                                             <div class="col-sm-7" style="margin:0 auto; float:none">
                                                 <div class="form-group row">
                                                     <h4 asp-for="@(Model.OPENVAS.PortaOpenvas)">Porta</h4>
-                                                    <input  <input type="number" class="form-control" asp-for="@(Model.OPENVAS.Porta)" value="9192" /> />
+                                                    <input type="number" class="form-control" asp-for="@(Model.OPENVAS.PortaOpenvas)" />
                                                 </div>
 
                                             </div>
@@ -3026,21 +3026,26 @@
                                         </div>
 
                                     </div>
+                                    <h4>Settaggi base</h4>
+                                    <hr />
                                      <div class="form-group row">
                                             <div class="col-sm-4">
                                                 <label class="control-label">Scegli lo user agent </label>
                                             </div>
                                              <div class="col-sm-1"></div>
-                                            <input type="text" class="col-sm-5" asp-for="@Model.DRUPWN.UserAgentDrupwn" placeholder="Googlebot" />  
-                                        </div>
-                                        <div class="form-group row">
+                                             <div class="col-sm-5">
+                                            <input type="text" class="form-control col-sm-5" asp-for="@Model.DRUPWN.UserAgentDrupwn" placeholder="Googlebot" />  
+                                            </div>
+                                    </div>
+                                    <div class="form-group row">
                                             <div class="col-sm-4">
                                                 <label class="control-label">Scegli il numero di threads </label>
                                             </div>
                                              <div class="col-sm-1"></div>
-                                            <input type="number" class="col-sm-5" asp-for="@Model.DRUPWN.ThreadDrupwn" value="-1" />  
-                                        </div>
-                                          
+                                             <div class="col-sm-5">
+                                            <input type="number" class="form-control" asp-for="@Model.DRUPWN.ThreadDrupwn" value="-1" />  
+                                            </div>
+                                    </div>      
                                     <div class="col-sm-12">
                                         <h4>Tipi di enumerazione</h4>                                       
                                          <hr />
