--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
-﻿@{ ViewData["Title"] = "Home"; }
+﻿@{ ViewData["Title"] = "Home"; 
+string titolo = (string) ViewData["titolo"];}
 @model webmva.Models.Progetto
 <div class="container">
-   <h2>WebMVA  </h2>
-    <p class="lead">
+    <pre style="background-color:transparent; border: 0px solid black; margin-top:2em; color:navy">@titolo</pre>
+    <p class="lead" style="color:navy">
       Collaborative Application for Vulnerability Assessment Analysis 
     </p>
     <hr />
@@ -110,7 +111,7 @@
                   </div>-->
              
                   
-                         <h2>Verifica dei servizi</h2> 
+                         <h2 style="color:navy">Verifica dei servizi</h2> 
                          <hr/>
                 
                   <div class="panel-body">
