Modificata scritta fighissima

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,10 +2,10 @@
 string titolo = (string) ViewData["titolo"];}
 @model webmva.Models.Progetto
 <div class="container">
-    <pre style="background-color:transparent; border: 0px solid black; margin-top:2em; color:navy">@titolo</pre>
-    <p class="lead" style="color:navy">
+    <pre style="background-color:transparent; border: 0px solid black; margin-top:2em; color:navy">@titolo </pre>
+    <h3 style="color:navy">
       Collaborative Application for Vulnerability Assessment Analysis 
-    </p>
+    </h3>
     <hr />
       <div class="row">
           
